--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ h2 { font-family: 'Ubuntu'; }
 h3 { font-family: 'Montserrat'; }
 
 #title {
-    background-color: #ff4c68;
+    background-color: #FFCCCB;
     color: #fff;
 }
 
@@ -71,7 +71,7 @@ h3 { font-family: 'Montserrat'; }
 #testimonials {
     padding: 7% 15%;
     text-align: center;
-    background-color: #ef8172;
+    background-color: #c96a5d;
     color: white;
 }
 
