--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ h3 {
 }
 
 #title {
-  background-color: #f54e68;
+  background-color: #f5566e;
   color: #fff;
 }
 
@@ -100,7 +100,7 @@ h3 {
 #testimonials {
   padding: 7% 15%;
   text-align: center;
-  background-color: #ef8172;
+  background-color: #ef8272;
   color: white;
 }
 
@@ -137,7 +137,7 @@ h3 {
 }
 
 #press {
-  background-color: #ef8172;
+  background-color: #ef8272;
   text-align: center;
   padding-bottom: 3%;
 }
@@ -163,7 +163,7 @@ h3 {
 }
 
 #cta {
-  background-color: #ff4c68;
+  background-color: #f55f77;
   text-align: center;
   padding-top: 100px;
   padding-bottom: 50px;
