Css error and updated color

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ h3 {
 }
 
 #title {
-  background-color: #f5566e;
+  background-color: #fd3a73;
   color: #fff;
 }
 
@@ -85,7 +85,7 @@ h3 {
 
 .contact-p {
   font-weight: 100;
-  color: ##d9aca7;
+  color: #d9aca7;
 }
 
 .fa-solid {
@@ -163,7 +163,7 @@ h3 {
 }
 
 #cta {
-  background-color: #f55f77;
+  background-color: #fd3a73;
   text-align: center;
   padding-top: 100px;
   padding-bottom: 50px;
