--- a/styles.css
+++ b/styles.css
@@ -1,166 +1,200 @@
 body {
-    font-family: 'Montserrat';
+  font-family: "Montserrat";
 }
 
-h2 { font-family: 'Ubuntu'; }
+h2 {
+  font-family: "Ubuntu";
+}
 
-h3 { font-family: 'Montserrat'; }
+h3 {
+  font-family: "Montserrat";
+}
 
 #title {
-    background-color: #FFCCCB;
-    color: #fff;
+  background-color: #fd3a73;
+  color: #fff;
 }
 
 #features {
-    padding: 7% 15%;
-    background-color: #fff;
-    position: relative;
+  padding: 7% 15%;
+  background-color: #fff;
+  position: relative;
 }
 
 .heroTitle {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 3.5rem;
-    line-height: 1.5;
-    font-weight: 900;
+  font-family: "Montserrat", sans-serif;
+  font-size: 3.5rem;
+  line-height: 1.5;
+  font-weight: 900;
 }
 
-.un-fts { padding-top: 100px; }
+.un-fts {
+  padding-top: 100px;
+}
 
-.container-fluid{ padding: 3%; }
+.container-fluid {
+  padding: 3%;
+}
 
 .title-image {
-    width: 18%;
-    transform: rotate(25deg);
-    position: absolute;
-    right: 22%;
+  width: 18%;
+  transform: rotate(25deg);
+  position: absolute;
+  right: 22%;
 }
 
-.navbar { padding-bottom: 70px; }
+.navbar {
+  padding-bottom: 70px;
+}
 
-.navbar-brand { font-family: 'Ubuntu'; }
+.navbar-brand {
+  font-family: "Ubuntu";
+}
 
-.navbar-item { padding: 0 18px; }
+.navbar-item {
+  padding: 0 18px;
+}
 
 .nav-link {
-    font-size: 1.2rem;
-    font-family: 'Montserrat';
-    font-weight: 300;
+  font-size: 1.2rem;
+  font-family: "Montserrat";
+  font-weight: 280;
 }
 
-.download-button { margin: 5% 3% 5% 0; }
+.download-button {
+  margin: 5% 3% 5% 0;
+}
 
 .feature-box {
-    text-align: center;
-    padding: 5%;
+  text-align: center;
+  padding: 5%;
 }
 
-.feature-header { font-weight: bold; }
+.feature-header {
+  font-weight: bold;
+}
+
+.padding-top80 {
+    padding-top: 80px;
+}
 
 .feature-p {
-    font-weight: 100;
-    color: #8f8f8f;
+  font-weight: 100;
+  color: #8f8f8f;
+}
+
+.contact-p {
+  font-weight: 100;
+  color: #d9aca7;
 }
 
 .fa-solid {
-    color: #ef8172;
-    margin: 1rem;
+  color: #ef8172;
+  margin: 1rem;
 }
 
-.fa-solid:hover { color: #ff4c68 }
+.fa-solid:hover {
+  color: #ff4c68;
+}
 
 #testimonials {
-    padding: 7% 15%;
-    text-align: center;
-    background-color: #c96a5d;
-    color: white;
+  padding: 7% 15%;
+  text-align: center;
+  background-color: #ef8272;
+  color: white;
 }
 
 .testi {
-    font-family: 'Montserrat';
-    font-weight: bold;
-    font-size: 3rem;
-    line-height: 1.5;
+  font-family: "Montserrat";
+  font-weight: bold;
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 @media (max-width: 1028px) {
-
-    #title {
-        text-align: center;
-    }
-    .title-image {
-        position: static;
-        transform: rotate(0);
-        width: 50%;
-    }
+  #title {
+    text-align: center;
+  }
+  .title-image {
+    position: static;
+    transform: rotate(0);
+    width: 50%;
+  }
 }
 
-.pricing-p { color: #8f8f8f; }
+.pricing-p {
+  color: #919090;
+}
 
 .testimonial-image {
-    width: 10%;
-    border-radius: 100%;
-    margin: 20px;
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
 }
 
-.carousel-item { padding: 7% 15%; }
+.carousel-item {
+  padding: 7% 15%;
+}
 
 #press {
-    background-color: #ef8172;
-    text-align: center;
-    padding-bottom: 3%;
+  background-color: #ef8272;
+  text-align: center;
+  padding-bottom: 3%;
 }
 
 .press-logo {
-    width: 15%;
-    margin: 20px 50px 20px;
+  width: 15%;
+  margin: 20px 50px 20px;
 }
 
-.prices-h3 { 
-    font-family: 'Montserrat';
-    padding-top: 16px;
-    font-weight: 700;
+.prices-h3 {
+  font-family: "Montserrat";
+  padding-top: 15px;
+  font-weight: 700;
 }
 
 #pricing {
-    padding: 100px;
-    text-align: center;
+  padding: 100px;
+  text-align: center;
 }
 
-.pricing-column { padding: 3% 2%; }
+.pricing-column {
+  padding: 3% 2%;
+}
 
 #cta {
-    background-color: #ff4c68;
-    text-align: center;
-    padding-top: 100px;
-    padding-bottom: 50px;
+  background-color: #fd3a73;
+  text-align: center;
+  padding-top: 100px;
+  padding-bottom: 50px;
 }
 
 #footer {
-    text-align: center;
+  text-align: center;
 }
 
 .cta-h3 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 3.5rem;
-    line-height: 1.5;
-    font-weight: 900;
-    color: #fff;
-    padding: 0px 400px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 3.5rem;
+  line-height: 1.5;
+  font-weight: 900;
+  color: #fff;
+  padding: 0px 400px;
 }
 
 .btn-cta {
-    margin-right: 35px;
+  margin-right: 35px;
 }
 
 .footer-icon {
-    background-color: #fff;
-    padding: 75px 7px 15px;
+  background-color: #fff;
+  padding: 75px 7px 15px;
 }
 
 .footer-p {
-    line-height: 1.5;
-    margin-bottom: 50px;
-    color: #8f8f8f;
-    font-weight: 400;
-    font-family: 'Montserrat';
+  line-height: 1.5;
+  margin-bottom: 50px;
+  color: #8f8f8f;
+  font-weight: 400;
+  font-family: "Montserrat";
 }
